# Laravel/storage/api-docs/api-docs.json
@@ -439,17 +439,17 @@
                 }
             }
         },
-        "/api/guest/{guestId}/rooms": {
+        "/api/guest/{id}/rooms": {
             "get": {
                 "tags": [
                     "Guest"
                 ],
                 "summary": "Get rooms of a specific guest",
                 "description": "Get rooms of a specific guest by ID",
-                "operationId": "98aee490827f36a7fb5345a5fc55d316",
+                "operationId": "5db7f10ac82052b461280c6d8fa653ff",
                 "parameters": [
                     {
-                        "name": "guestId",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of the guest",
                         "required": true,
@@ -473,8 +473,8 @@
                                                 "example": 1
                                             },
                                             "number": {
-                                                "type": "string",
-                                                "example": "101"
+                                                "type": "number",
+                                                "example": "1"
                                             },
                                             "checkInDate": {
                                                 "type": "string",
@@ -504,10 +504,10 @@
                 ],
                 "summary": "Remove rooms from a guest",
                 "description": "Remove rooms from a specific guest by ID and matching dates",
-                "operationId": "5956964231d48a72ef6bddbb6c8c7a49",
+                "operationId": "a972f08f5704b4372b27eaa07b7a7ff7",
                 "parameters": [
                     {
-                        "name": "guestId",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of the guest",
                         "required": true,
@@ -1070,19 +1070,17 @@
                         "description": "Hotel not found"
                     }
                 }
-            }
-        },
-        "/api/hotel/{hotel}/services": {
+            },
             "post": {
                 "tags": [
                     "Hotel"
                 ],
                 "summary": "Add services to a specific hotel",
                 "description": "Add services to a specific hotel by ID",
-                "operationId": "6b4feabc6cee19ae0a948ba3147eae6a",
+                "operationId": "b7971c5ae76d5d9241b8c9b00f21c098",
                 "parameters": [
                     {
-                        "name": "hotel",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of the hotel",
                         "required": true,
@@ -1134,10 +1132,10 @@
                 ],
                 "summary": "Remove services from a specific hotel",
                 "description": "Remove services from a specific hotel by ID",
-                "operationId": "58580db1d1859852cacfc7984dac400d",
+                "operationId": "67bc25975e81a9ac1accb2f07d6d883a",
                 "parameters": [
                     {
-                        "name": "hotel",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of the hotel",
                         "required": true,
@@ -1781,14 +1779,14 @@
                 }
             }
         },
-        "/api/room-guest/book": {
+        "/api/room-guest/{id}": {
             "get": {
                 "tags": [
                     "RoomGuest"
                 ],
                 "summary": "Get a specific room-guest",
                 "description": "Retrieve a specific room-guest by ID",
-                "operationId": "9751ecc99b28058243c3b5597751b938",
+                "operationId": "959088b547dfad31b5bc2cd83d6e5112",
                 "parameters": [
                     {
                         "name": "id",
@@ -1804,6 +1802,34 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Room-Guest not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "RoomGuest"
+                ],
+                "summary": "Delete a specific room-guest",
+                "description": "Delete a specific room-guest by ID",
+                "operationId": "8199cecb49dfa24ce683efd02ce64095",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the room-guest",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Room-Guest deleted successfully"
                     },
                     "404": {
                         "description": "Room-Guest not found"
@@ -1939,36 +1965,6 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation"
-                    }
-                }
-            }
-        },
-        "/api/room-guest/{id}": {
-            "delete": {
-                "tags": [
-                    "RoomGuest"
-                ],
-                "summary": "Delete a specific room-guest",
-                "description": "Delete a specific room-guest by ID",
-                "operationId": "8199cecb49dfa24ce683efd02ce64095",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the room-guest",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Room-Guest deleted successfully"
-                    },
-                    "404": {
-                        "description": "Room-Guest not found"
                     }
                 }
             }
@@ -2256,7 +2252,37 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation"
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "1"
+                                            },
+                                            "checkInDate": {
+                                                "type": "string",
+                                                "format": "date",
+                                                "example": "2024-07-30"
+                                            },
+                                            "checkOutDate": {
+                                                "type": "string",
+                                                "format": "date",
+                                                "example": "2024-08-01"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
                     },
                     "404": {
                         "description": "room not found"
@@ -2364,15 +2390,15 @@
                                 ],
                                 "properties": {
                                     "guest_id": {
-                                        "type": "integer",
-                                        "example": 1
-                                    },
-                                    "room_id": {
                                         "type": "array",
                                         "items": {
                                             "type": "integer",
                                             "example": 1
                                         }
+                                    },
+                                    "room_id": {
+                                        "type": "integer",
+                                        "example": 1
                                     },
                                     "checkInDate": {
                                         "type": "string",
@@ -2395,7 +2421,7 @@
                         "description": "Guests removed successfully"
                     },
                     "404": {
-                        "description": "room not found"
+                        "description": "Room not found"
                     }
                 }
             }
